# qemu-hmp

./: Cargo.toml  README.md  build.rs  deny.toml  hmp_coverage_report.txt
.github/workflows/: ci.yml
schema/: hmp-commands-info.hx  hmp-commands.hx
src/: args.rs  completer.rs  discover.rs  expr.rs  format.rs  generated_registry.rs  highlighter.rs  main.rs  prompt.rs  qmp.rs  repl.rs  terminal_image.rs
src/commands/: announce_self.rs  balloon.rs  block_job_cancel.rs  block_job_complete.rs  block_job_pause.rs  block_job_resume.rs  block_job_set_speed.rs  block_resize.rs  block_set_io_throttle.rs  block_stream.rs  boot_set.rs  calc_dirty_rate.rs  cancel_vcpu_dirty_limit.rs  change.rs  chardev_add.rs  chardev_remove.rs  chardev_send_break.rs  client_migrate_info.rs  closefd.rs  commit.rs  cont.rs  cpu.rs  delvm.rs  device_add.rs  device_del.rs  drive_add.rs  drive_backup.rs  drive_del.rs  drive_mirror.rs  dump_guest_memory.rs  dump_skeys.rs  dumpdtb.rs  eject.rs  exit_preconfig.rs  expire_password.rs  gdbserver.rs  getfd.rs  gpa2hpa.rs  gpa2hva.rs  gva2gpa.rs  (+119 more)
tests/: compare_hmp.py  hmp_commands.py  hmp_monitor.py  hmp_runner.py  hmp_sessions.py  test_completion.py  test_utils.py
