[package]
name = "qemu-hmp"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
description = "External HMP monitor for QEMU, communicating via QMP"

[dependencies]
qapi = { version = "0.15", features = ["qmp", "async-tokio-all"] }
qapi-qmp = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "net", "sync", "time"] }
reedline = "0.47"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"
futures = "0.3"
nu-ansi-term = "0.50"
chrono = "0.4"
crossterm = "0.29"
base64 = "0.22"
hex = "0.4"
